--- a/step_definitions/Steps_parse_step_expressions.cls
+++ b/step_definitions/Steps_parse_step_expressions.cls
@@ -9,37 +9,37 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Then_the_step_has_one_step_expression_with_the_dat_90F0EF0E4524(context As TContext, step_expressions As Collection)
+Public Sub Then_the_step_has_one_step_expression_with_the_dat_90F0EF0E4524(example_context As TContext, step_expressions As Collection)
     'Then the step has one step expression with the data type {string}
     TSpec.expect(LCase(TypeName(TStepVars.step.Expressions(1)))).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_value_of_the_expression_is_STR_8D490483B82D(context As TContext, step_expressions As Collection)
+Public Sub Then_the_value_of_the_expression_is_STR_8D490483B82D(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {string}
     TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_value_of_the_expression_is_INT_8D4904831D87(context As TContext, step_expressions As Collection)
+Public Sub Then_the_value_of_the_expression_is_INT_8D4904831D87(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {integer}
     TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_value_of_the_expression_is_DBL_8D490483D413(context As TContext, step_expressions As Collection)
+Public Sub Then_the_value_of_the_expression_is_DBL_8D490483D413(example_context As TContext, step_expressions As Collection)
     'Then the value of the expression is {double}
     TSpec.expect(TStepVars.step.Expressions(1)).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_step_has_no_step_expressions_DF47F903F69C(context As TContext)
+Public Sub Then_the_step_has_no_step_expressions_DF47F903F69C(example_context As TContext)
     'Then the step has no step expressions
     TSpec.expect(TStepVars.step.Expressions.Count).to_be 0
 End Sub
 
-Public Sub Then_the_step_has_INT_step_expressions_DF47F8B87951(context As TContext, step_expressions As Collection)
+Public Sub Then_the_step_has_INT_step_expressions_DF47F8B87951(example_context As TContext, step_expressions As Collection)
     'Then the step has {integer} step expressions
     TSpec.expect(TStepVars.step.Expressions.Count).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(context As TContext, step_expressions As Collection)
+Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(example_context As TContext, step_expressions As Collection)
     'And the data types of the expressions are {string}
     
     Dim data_types As Variant
@@ -54,7 +54,7 @@ Public Sub Then_the_data_types_of_the_expressions_are_STR_F48BBED5B618(context A
     Next
 End Sub
 
-Public Sub Then_the_value_of_the_expressions_are_STR_8D4904837C42(context As TContext, step_expressions As Collection)
+Public Sub Then_the_value_of_the_expressions_are_STR_8D4904837C42(example_context As TContext, step_expressions As Collection)
     'And the value of the expressions are {string}
         
     Dim expr_values As Variant
