--- a/step_definitions/Steps_parse_tags.cls
+++ b/step_definitions/Steps_parse_tags.cls
@@ -9,7 +9,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Then_the_parsed_features_contains_the_tags_STR_013B39CE37F4(context As TContext, step_expressions As Collection)
+Public Sub Then_the_parsed_features_contains_the_tags_STR_013B39CE37F4(example_context As TContext, step_expressions As Collection)
     'Then the parsed features contains the tags {string}
     
     Dim tags As Variant
@@ -21,7 +21,7 @@ Public Sub Then_the_parsed_features_contains_the_tags_STR_013B39CE37F4(context A
     Next
 End Sub
 
-Public Sub Then_the_parsed_example_contains_the_tags_STR_013B99DC06E4(context As TContext, step_expressions As Collection)
+Public Sub Then_the_parsed_example_contains_the_tags_STR_013B99DC06E4(example_context As TContext, step_expressions As Collection)
     'And the parsed example contains the tags {string}
     
     Dim tags As Variant
@@ -33,14 +33,14 @@ Public Sub Then_the_parsed_example_contains_the_tags_STR_013B99DC06E4(context As
     Next
 End Sub
 
-Public Sub Then_the_parsed_features_contains_INT_examples_013B39CEE3B0(context As TContext, step_expressions As Collection)
+Public Sub Then_the_parsed_features_contains_INT_examples_013B39CEE3B0(example_context As TContext, step_expressions As Collection)
     'Then the parsed features contains {integer} examples
     TSpec.expect(m_parsed_feature.sections.Count).to_be 2
     TSpec.expect(TypeName(m_parsed_feature.sections(2))).to_be "TExample"
     Set TStepVars.example = m_parsed_feature.sections(2)
 End Sub
 
-Public Sub Then_the_parsed_second_example_contains_the_tags_S_E5AA0E4C4719(context As TContext, step_expressions As Collection)
+Public Sub Then_the_parsed_second_example_contains_the_tags_S_E5AA0E4C4719(example_context As TContext, step_expressions As Collection)
     'And the parsed second example contains the tags {string}
         
     Dim tags As Variant
@@ -52,7 +52,7 @@ Public Sub Then_the_parsed_second_example_contains_the_tags_S_E5AA0E4C4719(conte
     Next
 End Sub
 
-Public Sub Then_the_parsed_rule_contains_the_tags_STR_7B67E25E94E1(context As TContext, step_expressions As Collection)
+Public Sub Then_the_parsed_rule_contains_the_tags_STR_7B67E25E94E1(example_context As TContext, step_expressions As Collection)
     'Then the parsed rule contains the tags {string}
     
     Dim rule As TRule
@@ -66,7 +66,7 @@ Public Sub Then_the_parsed_rule_contains_the_tags_STR_7B67E25E94E1(context As TC
     Next
 End Sub
 
-Public Sub Then_the_included_example_contains_the_tags_STR_33546FCE3943(context As TContext, step_expressions As Collection)
+Public Sub Then_the_included_example_contains_the_tags_STR_33546FCE3943(example_context As TContext, step_expressions As Collection)
     'And the included example contains the tags {string}
     
     Dim included_example As TExample
