--- a/step_definitions/Steps_Parse_Examples.cls
+++ b/step_definitions/Steps_Parse_Examples.cls
@@ -9,17 +9,17 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Given_an_example_STR_6A35400021EE(context As TContext, step_expressions As Collection)
+Public Sub Given_an_example_STR_6A35400021EE(example_context As TContext, step_expressions As Collection)
     'Given an example {string}
     TStepVars.gherkin_text = step_expressions(1)
 End Sub
 
-Public Sub Given_this_line_is_followed_by_STR_A388704A4A7E(context As TContext, step_expressions As Collection)
+Public Sub Given_this_line_is_followed_by_STR_A388704A4A7E(example_context As TContext, step_expressions As Collection)
     'Given this line is followed by "    Given a precondition"
     TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf & step_expressions(1)
 End Sub
 
-Public Sub Given_an_example_with_two_steps_STR_and_STR_A2651FF47542(context As TContext, step_expressions As Collection)
+Public Sub Given_an_example_with_two_steps_STR_and_STR_A2651FF47542(example_context As TContext, step_expressions As Collection)
     'Given an example with two steps {string} and {string}
     TStepVars.gherkin_text = "Feature: sample feature" & vbLf _
                         & vbLf _
@@ -28,23 +28,23 @@ Public Sub Given_an_example_with_two_steps_STR_and_STR_A2651FF47542(context As T
                         & step_expressions(2)
 End Sub
 
-Public Sub Given_the_first_step_is_STR_5F91EBC94964(context As TContext, step_expressions As Collection)
+Public Sub Given_the_first_step_is_STR_5F91EBC94964(example_context As TContext, step_expressions As Collection)
     'Given the first step is "Given a first step"
     TStepVars.gherkin_text = TStepVars.gherkin_text & vbLf _
                                 & step_expressions(1)
 End Sub
 
-Public Sub Given_a_background_6A351EBB4211(context As TContext)
+Public Sub Given_a_background_6A351EBB4211(example_context As TContext)
     'Given a background
     TStepVars.gherkin_text = "Background:"
 End Sub
 
-Public Sub Then_the_parsed_result_contains_an_example_7B67C585A7A0(context As TContext)
+Public Sub Then_the_parsed_result_contains_an_example_7B67C585A7A0(example_context As TContext)
     'Then the parsed result contains an example
     TSpec.expect(TypeName(m_parsed_feature.sections(1))).to_be "TExample"
 End Sub
 
-Public Sub When_the_example_is_parsed_CEB09D77F01F(context As TContext)
+Public Sub When_the_example_is_parsed_CEB09D77F01F(example_context As TContext)
     'When the example is parsed
     Set TStepVars.example = New TExample
     TFeatureParser.parse_steps Split(Trim(TStepVars.gherkin_text), vbLf), 0, TStepVars.example
@@ -53,7 +53,7 @@ Public Sub When_the_example_is_parsed_CEB09D77F01F(context As TContext)
     End If
 End Sub
 
-Public Sub Then_the_example_clause_from_the_parsed_result_con_C8ADD15947E9(context As TContext)
+Public Sub Then_the_example_clause_from_the_parsed_result_con_C8ADD15947E9(example_context As TContext)
     'Then the example clause from the parsed result contains all the steps
     TSpec.expect(TStepVars.example.Steps.Count).to_be 3
     TSpec.expect(TStepVars.example.Steps(1).SType).to_be STEP_TYPE_GIVEN
@@ -67,12 +67,12 @@ Public Sub Then_the_example_clause_from_the_parsed_result_con_C8ADD15947E9(conte
     TSpec.expect(TStepVars.example.Steps(3).Elements(1)).to_be "Then"
 End Sub
 
-Public Sub Then_the_type_of_the_second_step_is_set_to_STR_9CA91DFBD6DD(context As TContext, step_expressions As Collection)
+Public Sub Then_the_type_of_the_second_step_is_set_to_STR_9CA91DFBD6DD(example_context As TContext, step_expressions As Collection)
     'Then the type of the second step is set to {string}
     TSpec.expect(m_parsed_feature.sections(1).Steps(2).SType).to_be step_expressions(1)
 End Sub
 
-Public Sub Then_first_step_is_changed_to_STR_26F73CDF60C2(context As TContext, step_expressions As Collection)
+Public Sub Then_first_step_is_changed_to_STR_26F73CDF60C2(example_context As TContext, step_expressions As Collection)
     'Then first step is changed to {string}
     TSpec.expect(TStepVars.example.Steps(1).StepDefinition).to_be step_expressions(1)
 End Sub
