--- a/step_definitions/Steps_report_statistics.cls
+++ b/step_definitions/Steps_report_statistics.cls
@@ -9,12 +9,12 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Option Explicit
 
-Public Sub Given_a_test_run_took_INT_ms_A7563698E569(context As TContext, step_expressions As Collection)
+Public Sub Given_a_test_run_took_INT_ms_A7563698E569(example_context As TContext, step_expressions As Collection)
     'And a test run took {integer} ms
     TStepVars.Duration = CInt(step_expressions(1))
 End Sub
 
-Public Sub Given_one_example_in_this_run_had_INT_passed_INT_f_800581B31566(context As TContext, step_expressions As Collection)
+Public Sub Given_one_example_in_this_run_had_INT_passed_INT_f_800581B31566(example_context As TContext, step_expressions As Collection)
     'And one example in this run had {integer} passed, {integer} failed, {integer} missing and {integer} pending steps
     Dim index As Integer
    
@@ -32,7 +32,7 @@ Public Sub Given_one_example_in_this_run_had_INT_passed_INT_f_800581B31566(conte
     Next
 End Sub
 
-Public Sub When_the_statistics_are_reported_418C385A7E0B(context As TContext)
+Public Sub When_the_statistics_are_reported_418C385A7E0B(example_context As TContext)
     'When the statistics are reported
     TStepVars.session.report_statistics TStepVars.Duration
 End Sub
